bad/if_context_01.example_compiler_output
ERROR
[1mbad/if_context_01.lat:6:2: [1;31merror: [0;1muse of undeclared variable `y`[m
	y;
	[1;32m^[m
